# PhysBasedAnimation

./: .gitignore  CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  README.md  actual_output.txt  main.cpp  test_output.txt
Backup/bulldoze_output/: frame0000.bgeo  frame0001.bgeo  frame0002.bgeo  frame0003.bgeo  frame0004.bgeo  frame0005.bgeo  frame0006.bgeo  frame0007.bgeo  frame0008.bgeo  frame0009.bgeo  frame0010.bgeo  frame0011.bgeo  frame0012.bgeo  frame0013.bgeo  frame0014.bgeo  frame0015.bgeo  frame0016.bgeo  frame0017.bgeo  frame0018.bgeo  frame0019.bgeo  frame0020.bgeo  frame0021.bgeo  frame0022.bgeo  frame0023.bgeo  frame0024.bgeo  frame0025.bgeo  frame0026.bgeo  frame0027.bgeo  frame0028.bgeo  frame0029.bgeo  frame0030.bgeo  frame0031.bgeo  frame0032.bgeo  frame0033.bgeo  frame0034.bgeo  frame0035.bgeo  frame0036.bgeo  frame0037.bgeo  frame0038.bgeo  frame0039.bgeo  (+550 more)
Backup/output/: frame0000.bgeo  frame0001.bgeo  frame0002.bgeo  frame0003.bgeo  frame0004.bgeo  frame0005.bgeo  frame0006.bgeo  frame0007.bgeo  frame0008.bgeo  frame0009.bgeo  frame0010.bgeo  frame0011.bgeo  frame0012.bgeo  frame0013.bgeo  frame0014.bgeo  frame0015.bgeo  frame0016.bgeo  frame0017.bgeo  frame0018.bgeo  frame0019.bgeo  frame0020.bgeo  frame0021.bgeo  frame0022.bgeo  frame0023.bgeo  frame0024.bgeo  frame0025.bgeo  frame0026.bgeo  frame0027.bgeo  frame0028.bgeo  frame0029.bgeo  frame0030.bgeo  frame0031.bgeo  frame0032.bgeo  frame0033.bgeo  frame0034.bgeo  frame0035.bgeo  frame0036.bgeo  frame0037.bgeo  frame0038.bgeo  frame0039.bgeo  (+920 more)
Projects/: CMakeLists.txt
Projects/FEM/: CMakeLists.txt  example_debug
Projects/FEM/src/: FEMSolver.cpp  globalincludes.h
Projects/FEM/src/integrator/: BaseIntegrator.h
Projects/FEM/src/mesh/: Particles.h  TetraMesh.h  Tetrahedron.h
Projects/FEM/src/output/: frame0000.bgeo  frame0184.bgeo
src/: main.cpp
src/Components/: Spring.cpp  Spring.h
src/components/: Spring.cpp  Spring.h
src/utility/: FileHelper.cpp  FileHelper.h
